完成订单的部分操作
