# docs/swagger.json
@@ -185,6 +185,63 @@
                 }
             }
         },
+        "/admin/policy/getByRole": {
+            "post": {
+                "description": "通过角色获取策略",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "策略管理"
+                ],
+                "summary": "通过角色获取策略",
+                "parameters": [
+                    {
+                        "description": "通过角色获取策略",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetPolicyByRoleReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/policy/list": {
+            "post": {
+                "description": "获取策略",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "策略管理"
+                ],
+                "summary": "获取策略",
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/policy/remove": {
             "post": {
                 "description": "删除策略",
@@ -288,6 +345,40 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/order/create": {
+            "post": {
+                "description": "创建订单创建订单",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "订单"
+                ],
+                "summary": "创建订单",
+                "parameters": [
+                    {
+                        "description": "创建订单",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateOrderReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.CreateOrderResp"
                         }
                     }
                 }
@@ -866,6 +957,25 @@
                 }
             }
         },
+        "request.CreateOrderReq": {
+            "type": "object",
+            "required": [
+                "amount",
+                "pid",
+                "uid"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "pid": {
+                    "type": "integer"
+                },
+                "uid": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.CreateProductReq": {
             "type": "object",
             "required": [
@@ -920,6 +1030,14 @@
                     "type": "integer"
                 },
                 "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.GetPolicyByRoleReq": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "integer"
                 }
             }
@@ -1003,7 +1121,6 @@
             "required": [
                 "desc",
                 "id",
-                "img",
                 "name",
                 "price",
                 "status",
@@ -1015,9 +1132,6 @@
                 },
                 "id": {
                     "type": "integer"
-                },
-                "img": {
-                    "type": "string"
                 },
                 "name": {
                     "type": "string"
@@ -1138,6 +1252,14 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "response.CreateOrderResp": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
